# battleship

./: README.md  test_api.py  test_events.py
backend/: Cargo.toml
backend/src/: main.rs
frontend/: frontend.py  index.html  script.js
